# duplexer

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  coverage.json  docker-compose.examples.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  publish.yml  validate-and-publish.yml
src/duplexer/: __init__.py  __main__.py  cli.py  interleave.py  io_utils.py  watcher.py
tests/: conftest.py  test_cli.py  test_cli_helpers.py  test_interleave.py  test_io_utils.py  test_live_watching.py  test_performance.py  test_process_file.py  test_watcher.py
