[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duplexer"
version = "0.1.0"
description = "PDF duplex interleaving service for manually scanned documents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pdf", "scanning", "duplex", "paperless-ngx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pypdf>=6.4.0,<7.0.0",
    "click>=8.3.0,<9.0.0",
    "watchdog>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.14.0,<1.0.0",
    "pyright>=1.1.390,<2.0.0",
    "reportlab>=4.4.0,<5.0.0",
    "pre-commit>=4.5.0,<5.0.0",
    "psutil>=7.0.0,<8.0.0",
]

[project.scripts]
duplexer = "duplexer.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
duplexer = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]  # Allow print statements in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q --strict-markers --cov=src/duplexer --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (performance tests)",
]
